--- a/src/utils/header/header.module.scss
+++ b/src/utils/header/header.module.scss
@@ -4,10 +4,44 @@
     @include center_center;
     width: 100%;
     height: 100px;
-    flex-direction: column;
+    flex-direction: row;
     background-color: transparent;
     color: white;
-    border: 2px solid white;
+    border: 1px solid white;
     border-radius: 0px 0px 5px 5px;
-    position: absolute;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 90000;
+    .img_logo{
+        width: 65%;
+    }
+    nav{
+        @include center_center;
+        width: 35%;
+        justify-content: space-evenly;
+        .active{
+            border-bottom: 3px solid currentColor;
+            color: rgb(255, 255, 255);
+            animation: scale 0.1s ease;
+        }
+        p{
+            height: 25px;
+            cursor: pointer;
+            user-select: none;
+            color: rgb(160, 160, 160);
+        }
+    }
+}
+@keyframes scale {
+    0%{
+        border-bottom: 0px solid currentColor;
+        transform: scale(1);
+    }
+    100%{
+        border-bottom: 3px solid currentColor;
+        transform: scale(1.02)
+
+    }
 }
