--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,3 +6,25 @@
   width: 100%;
   height: auto;
 }
+.bg_1{
+  background-image: url("./images/work/bg-1.png");
+  z-index: 2;
+  animation: slide_left 0.8s ease;
+  opacity: 0.1;
+}
+.bg_2{
+  background-image: url("./images/work/bg-2.png");
+  z-index: 1;
+  opacity: 1;
+  animation: slide_left 0.8s ease;
+  opacity: 0.07;
+}
+.bg_1, .bg_2{
+  width: 100%;
+  height: 150vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: fixed;
+  z-index: 0;
+}
