added slider, missing information and images

--- a/src/components/work/section-work/section-work.module.scss
+++ b/src/components/work/section-work/section-work.module.scss
@@ -14,6 +14,8 @@
     @include center_center;
     flex-direction: row;
     height: 100vh;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
     .col_description{
         @include center_start;
         flex-direction: column;
