--- a/src/store/Router.module.scss
+++ b/src/store/Router.module.scss
@@ -1,19 +1,29 @@
-@use './flex_custom' as *;
+@use '../flex_custom.scss' as *;
 
 .container{
   @include start_center;
   flex-direction: column;
   width: 100%;
   height: auto;
+  .container_slider{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #222222ef;
+    position: fixed;
+    z-index: 9999999999999999000000000000000;
+  }
 }
 .bg_1{
-  background-image: url("./images/work/bg-1.png");
+  background-image: url("../images/work/bg-1.png");
   z-index: 2;
   animation: slide_left 0.8s ease;
   opacity: 0.1;
 }
 .bg_2{
-  background-image: url("./images/work/bg-2.png");
+  background-image: url("../images/work/bg-2.png");
   z-index: 1;
   opacity: 1;
   animation: slide_left 0.8s ease;
