--- a/src/components/me/introduce-myself/myself.module.scss
+++ b/src/components/me/introduce-myself/myself.module.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Seaweed+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 
+
 .container{
     @include start_center;
     flex-direction: row;
@@ -41,7 +42,7 @@
         height: 100%;
         z-index: 1000;
         h1{
-            font-size: 75px;
+            font-size: 4.5rem;
             font-family: 'Permanent Marker';
             color: rgb(255, 255, 255);
             margin: 0px;
@@ -116,6 +117,20 @@
             background-repeat: no-repeat;
             background-size: contain;
         }
+    }
+}
+@media only screen and (min-width: 300px) and (max-width: 745px) {
+    :root{
+        --width-img-brush: 40rem;
+        --height-img-brush: 25rem;
+        --font-size-title: 2.5rem;
+    }
+    .column_info{
+        width: 100% !important;
+        padding-left: 10%;
+    }
+    .column_picture, .img_bg_1, .img_bg_2, .img_bg_3{
+        display: none !important;
     }
 }
 @keyframes scale_in {
