--- a/src/components/work/section-work/section-work.module.scss
+++ b/src/components/work/section-work/section-work.module.scss
@@ -1,5 +1,9 @@
 @use '../../../flex_custom.scss' as *;
-
+:root{
+    --width-img-brush: 100%;
+    --height-img-brush: 75%;
+    --font-size-title: 3.5rem;
+}
 .row{
     @include center_center;
     flex-direction: row;
@@ -26,7 +30,7 @@
         h1{
             width: 100%;
             font-family: 'Permanent Marker';
-            font-size: 60px;
+            font-size: var(--font-size-title) ;
         }
         p{
             width: 100%;
@@ -162,16 +166,41 @@
             background-image: url("../../../images/work/brush-1.png");
             background-size: contain;
             background-repeat: no-repeat;
-            width: 100%;
-            height: 75%;
+            background-position: center;
+            width: var(--width-img-brush);
+            height: var(--height-img-brush);
+            padding-top: 1%;
         }
         .img_brush_2{
             background-image: url("../../../images/work/brush-2.png");
             background-size: contain;
             background-repeat: no-repeat;
-            width: 100%;
-            height: 75%;
+            background-position: center;
+            width: var(--width-img-brush);
+            height: var(--height-img-brush);
         }
+    }
+}
+@media only screen and (min-width: 300px) and (max-width: 950px) {
+    :root{
+        --width-img-brush: 40rem;
+        --height-img-brush: 25rem;
+        --font-size-title: 2.5rem;
+    }
+    .row:nth-child(even){
+        flex-direction: column;
+        width: 100%;
+    }
+    .row:nth-child(odd){
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+    .col_description{
+        width: 80vw !important;
+    }
+    .col_picture{
+        width: 80vw !important;
+        margin-top: 1%;
     }
 }
 @keyframes scale_in {
