--- a/src/store/Router.module.scss
+++ b/src/store/Router.module.scss
@@ -6,14 +6,41 @@
   width: 100%;
   height: auto;
   .container_slider{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include center_center;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
     background-color: #222222ef;
     position: fixed;
     z-index: 9999999999999999000000000000000;
+    .container_button_esc{
+      @include center_center;
+      flex-direction: column;
+      width: 45px;
+      height: 60px;
+      position: absolute;
+      top: 5%;
+      left: 5%;
+      .button_escape{
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        border: 3px solid white;
+        background-color: black;
+        color: white;
+        transform: scale(1);
+        transition: transform 0.5s ease;
+      }
+      .button_escape:hover{
+        transform: scale(1.05);
+      }
+      label{
+        color: white;
+        font-family: "Nunito";
+        font-size: 13px;
+      }
+    }
+    
   }
 }
 .bg_1{
@@ -37,4 +64,20 @@
   background-size: contain;
   position: fixed;
   z-index: 0;
+}
+@keyframes scale_in {
+  0%{
+      transform: translateY(0px);
+  }
+  100%{
+      transform: translateY(-6px);
+  }
+}
+@keyframes scale_out {
+  0%{
+      transform: translateY(-6px);
+  }
+  100%{
+      transform: translateY(0px);
+  }
 }
