--- a/src/utils/header/header.module.scss
+++ b/src/utils/header/header.module.scss
@@ -16,6 +16,11 @@
     z-index: 90000;
     .img_logo{
         width: 65%;
+        padding-left: 5%;
+        img {
+            width: 6%;
+            transition: width 0.5s ease;
+        }
     }
     nav{
         @include center_center;
