--- a/src/store/Router.module.scss
+++ b/src/store/Router.module.scss
@@ -20,7 +20,7 @@
       height: 60px;
       position: absolute;
       top: 5%;
-      left: 5%;
+      right: 5%;
       .button_escape{
         width: 100%;
         height: 100%;
@@ -29,10 +29,14 @@
         background-color: black;
         color: white;
         transform: scale(1);
-        transition: transform 0.5s ease;
-      }
-      .button_escape:hover{
-        transform: scale(1.05);
+        transition: all 0.5s ease;
+        &:hover {
+          border: 3px solid black;
+          background-color: white;
+          transform: scale(1.1);
+          color: black;
+        }
+
       }
       label{
         color: white;
