--- a/src/components/work/section-work/section-work.module.scss
+++ b/src/components/work/section-work/section-work.module.scss
@@ -288,3 +288,21 @@
         transform: translatey(0px);
     }
 }
+@media only screen and (min-width: 400px) and (max-width: 600px) {
+    .img_description {
+        width: 31% !important;
+        height: 17% !important;
+    }
+}
+@media only screen and (min-width: 601px) and (max-width: 950px) {
+    .img_description {
+        width: 31% !important;
+        height: 21% !important;
+    }
+}
+@media only screen and (min-width: 951px) and (max-width: 1350px) {
+    .img_description {
+        width: 40% !important;
+        height: 15% !important;
+    }
+}
