--- a/src/store/Router.module.scss
+++ b/src/store/Router.module.scss
@@ -47,20 +47,20 @@
     
   }
 }
-.bg_1{
+.bg_1, .bg_1_contact{
   background-image: url("../images/work/bg-1.png");
   z-index: 2;
   animation: slide_left 0.8s ease;
   opacity: 0.1;
 }
-.bg_2{
+.bg_2, .bg_2_contact{
   background-image: url("../images/work/bg-2.png");
   z-index: 1;
   opacity: 1;
   animation: slide_left 0.8s ease;
   opacity: 0.07;
 }
-.bg_1, .bg_2{
+.bg_1, .bg_2, .bg_1_contact, .bg_2_contact{
   width: 100%;
   height: 150vh;
   background-position: center;
@@ -68,6 +68,18 @@
   background-size: contain;
   position: fixed;
   z-index: 0;
+}
+.bg_1_contact{
+  left: -10%;
+  top: 0;
+}
+.bg_2_contact{
+  right: -10%;
+  top: 0;
+}
+.bg_1_contact, .bg_2_contact{
+  width: 130vw !important;
+
 }
 @keyframes scale_in {
   0%{
