--- a/src/store/Router.module.scss
+++ b/src/store/Router.module.scss
@@ -12,7 +12,7 @@
     height: 100vh;
     background-color: #222222ef;
     position: fixed;
-    z-index: 9999999999999999000000000000000;
+    z-index: 10000000000 !important;
     .container_button_esc{
       @include center_center;
       flex-direction: column;
