--- a/src/utils/header/header.module.scss
+++ b/src/utils/header/header.module.scss
@@ -55,3 +55,11 @@
 
     }
 }
+@media only screen and (min-width: 300px) and (max-width: 1000px) {
+    .img_logo{
+        img {
+            height: 10%;
+            transition: width 0.5s ease;
+        }
+    }
+}
