--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -1,11 +1,10 @@
-@use '../../flex_custom.scss' as *;
+@use "../../flex_custom.scss" as *;
 
 .container {
-    @include center_center;
-    width: 100vw;
-    height: 100vh;
-    flex-direction: column;
-    background-color: black;
-    overflow: hidden;
-    z-index: 0;
+  @include center_center;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
+  overflow: hidden;
+  z-index: 1;
 }
