--- a/src/global.css
+++ b/src/global.css
@@ -36,7 +36,7 @@ body {
 .bm-menu-wrap {
   z-index: 100000000 !important;
   right: 0 !important;
-  background-color: white;
+  background-color: black;
   width: 70% !important;
   padding-top: 15%;
 }
@@ -45,7 +45,7 @@ body {
   margin-left: 15% !important;
   margin-top: 7% !important;
   font-size: 40px;
-  color: black;
+  color: white;
   transition: all 0.5s ease;
 }
 .bm-menu-wrap input {
