--- a/src/store/Router.module.scss
+++ b/src/store/Router.module.scss
@@ -45,6 +45,11 @@
     }
   }
 }
+
+.close-ham-menu {
+  color: white;
+}
+
 .bg_1,
 .bg_1_contact {
   background-image: url("../images/work/bg-1.png");
