--- a/src/containers/work/work.module.scss
+++ b/src/containers/work/work.module.scss
@@ -12,6 +12,7 @@
     width: 50px;
     height: 50px;
     background-color: white;
+    border: none;
     position: fixed;
     bottom: 5%;
     right: 5%;
