--- a/src/utils/header/header.module.scss
+++ b/src/utils/header/header.module.scss
@@ -44,6 +44,13 @@
     }
   }
 }
+
+.hm-button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 @keyframes scale {
   0% {
     border-bottom: 0px solid currentColor;
