--- a/src/components/contact/card/card.module.scss
+++ b/src/components/contact/card/card.module.scss
@@ -9,18 +9,25 @@
   height: 400px;
   border: 5px solid white;
   background-color: black;
+  animation: fade_in 0.5s ease;
+  
   h1 {
     color: white;
     text-align: center;
     font-family: "Nunito";
     font-weight: 900;
+    margin: 1rem 0;
   }
-  p {
-    font-family: "Nunito";
+  
+  .content_wrapper {
+    display: flex;
+    height: 50%;
   }
+  
   .container_img {
     @include center_center;
     width: 20%;
+    
     img {
       user-select: none;
       background-size: cover;
@@ -28,21 +35,47 @@
       margin-left: 30%;
     }
   }
+  
   .info_card {
     width: 80%;
     user-select: auto;
+    
     .row_info {
       @include space_between_start;
       padding-right: 7%;
+      font-family: "Nunito";
+      
       .title {
         font-weight: 900;
+        color: white;
       }
-      p {
+      
+      span,
+      a {
         color: white;
         margin: 4% 0 0 10%;
       }
+      
+      .contact_link {
+        color: #d59cff;
+        text-decoration: none;
+        transition: color 0.3s ease;
+        
+        &:hover,
+        &:focus {
+          color: #f0b5ff;
+          text-decoration: underline;
+        }
+        
+        &:focus-visible {
+          outline: 2px solid #762ada;
+          outline-offset: 2px;
+          border-radius: 2px;
+        }
+      }
     }
   }
+  
   .container_button {
     @include center_center;
   }
@@ -61,29 +94,41 @@
   margin-top: 3%;
   transition: all 0.5s ease;
   text-decoration: none !important;
-  p {
+  
+  span {
     width: auto;
     margin: 0px;
     padding: 0px;
     font-weight: 800;
     color: black;
     transition: color 0.5s;
+    font-family: "Nunito";
   }
+  
   .icon_button_white {
     color: rgb(0, 0, 0);
     transition: color 0.5s ease;
   }
 }
-.button_redirect_white:hover {
+
+.button_redirect_white:hover,
+.button_redirect_white:focus {
   animation: scale_in 0.5s ease;
   background-color: rgb(0, 0, 0);
   transform: translateY(-6px);
-  p {
+  
+  span {
     color: rgb(255, 255, 255);
   }
+  
   .icon_button_white {
     color: white;
   }
+}
+
+.button_redirect_white:focus-visible {
+  outline: 3px solid #762ada;
+  outline-offset: 4px;
 }
 @media only screen and (min-width: 800px) and (max-width: 1100px) {
   .container {
