--- a/src/utils/header/header.module.scss
+++ b/src/utils/header/header.module.scss
@@ -1,54 +1,185 @@
-@use "../../flex_custom.scss" as *;
+@import "../../flex_custom.scss";
 
 .container {
-  @include center_center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 100px;
+  height: 70px;
   flex-direction: row;
   background-color: transparent;
   color: white;
   border: 1px solid white;
-  border-radius: 0px 0px 5px 5px;
+  border-radius: 0 0 4px 4px;
   position: fixed;
-  top: 0px;
-  left: 0px;
-  right: 0px;
+  top: 0;
+  left: 0;
+  right: 0;
   z-index: 90000;
+  transition: height 0.5s ease, background-color 0.5s ease;
+
+  @media (min-width: 768px) {
+    height: 90px;
+  }
+
+  @media (min-width: 1024px) {
+    height: 100px;
+  }
+
+  &.scrolled {
+    height: 60px;
+    background-color: rgba(52, 52, 52, 0.77);
+    border: none;
+    animation: scale_header_in 0.5s ease;
+    backdrop-filter: blur(10px);
+  }
+
   .img_logo {
-    width: 65%;
-    padding-left: 5%;
-    img {
-      width: 6%;
+    width: 50%;
+    padding-left: 1rem;
+    
+    @media (min-width: 768px) {
+      width: 60%;
+      padding-left: 1.5rem;
+    }
+
+    @media (min-width: 1024px) {
+      width: 65%;
+      padding-left: 2rem;
+    }
+    
+    .logo {
+      width: 18%;
+      min-width: 40px;
+      max-width: 80px;
       transition: width 0.5s ease;
+      height: auto;
+
+      @media (min-width: 768px) {
+        width: 12%;
+      }
+
+      @media (min-width: 1024px) {
+        width: 6%;
+      }
+
+      &.logoSmall {
+        width: 12%;
+
+        @media (min-width: 768px) {
+          width: 8%;
+        }
+
+        @media (min-width: 1024px) {
+          width: 3%;
+        }
+      }
     }
   }
+
   nav {
-    @include center_center;
-    width: 35%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
     justify-content: space-evenly;
-    .active_white {
-      color: rgb(255, 255, 255);
-      border-bottom: 3px solid currentColor;
-      animation: scale 0.1s ease;
+
+    @media (min-width: 1024px) {
+      width: 35%;
     }
-    .active_black {
-      color: rgb(0, 0, 0);
-      border-bottom: 3px solid black;
-      animation: scale 0.1s ease;
+
+    .navList {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      justify-content: space-evenly;
+      align-items: center;
+      gap: 0.5rem;
+
+      @media (min-width: 1024px) {
+        gap: 1rem;
+      }
+
+      li {
+        margin: 0;
+      }
     }
-    p {
-      height: 25px;
+
+    .navButton {
+      min-height: 44px;
       cursor: pointer;
       user-select: none;
       color: rgb(160, 160, 160);
+      background: none;
+      border: none;
+      font-family: inherit;
+      font-size: 0.875rem;
+      padding: 0.5rem 1rem;
+      transition: color 0.3s ease, border-bottom 0.3s ease, padding-bottom 0.3s ease;
+
+      @media (min-width: 1024px) {
+        font-size: 1rem;
+        padding: 0.5rem 1.5rem;
+      }
+
+      &:hover,
+      &:focus {
+        color: rgb(200, 200, 200);
+        outline: none;
+      }
+
+      &:focus-visible {
+        outline: 2px solid #762ada;
+        outline-offset: 4px;
+        border-radius: 2px;
+      }
+
+      &.active_white {
+        color: rgb(255, 255, 255);
+        border-bottom: 3px solid currentColor;
+        padding-bottom: 0.5rem;
+        animation: scale 0.1s ease;
+      }
+
+      &.active_black {
+        color: rgb(0, 0, 0);
+        border-bottom: 3px solid black;
+        padding-bottom: 0.5rem;
+        animation: scale 0.1s ease;
+      }
     }
   }
 }
 
 .hm-button {
+  background: none;
   border: none;
-  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
   cursor: pointer;
+  min-width: 44px;
+  min-height: 44px;
+  padding: 0.5rem;
+  transition: transform 0.3s ease;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+  }
+
+  &:focus-visible {
+    outline: 3px solid #762ada;
+    outline-offset: 4px;
+    border-radius: 4px;
+  }
 }
 
 @keyframes scale {
@@ -61,10 +192,11 @@
     transform: scale(1.02);
   }
 }
-@media only screen and (max-width: 500px) {
-  .img_logo {
-    img {
-      width: 16%;
-    }
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
   }
 }
